Fixed double scrollbar in chat

--- a/serveur_react/src/App.css
+++ b/serveur_react/src/App.css
@@ -17,6 +17,7 @@
 body {
     font-family: "Poppins", sans-serif;
     background: #fafafa;
+    overflow: hidden;
 }
 
 a,
